Adding CloudRunEvents to tide.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -64,6 +64,7 @@ tide:
     - knative/caching
     - knative/website
     - knative/community
+    - GoogleCloudPlatform/cloud-run-events
     labels:
     - lgtm
     - approved
