--- a/tools/monitoring/gke_deployment/monitoring_service.yaml
+++ b/tools/monitoring/gke_deployment/monitoring_service.yaml
@@ -56,7 +56,13 @@ spec:
         - name: monitoring-db-credentials
           mountPath: /secrets/cloudsql/monitoringdb
           readOnly: true
+        - name: email-credentials
+          mountPath: /secrets/email
+          readOnly: true
       volumes:
       - name: monitoring-db-credentials
         secret:
           secretName: monitoring-db-credentials
+      - name: email-credentials
+        secret:
+          secretName: email-credentials
